# chess2_1

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ai.cpp  ai.h  aiworker.h  boardwidget.cpp  boardwidget.h  chessboard.cpp  chessboard.h  chessgame.cpp  chessgame.h  chesspiece.cpp  chesspiece.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
